[package]
name = "miracl_core_bls12381"
version = "0.4.1"
authors = ["DFINITY Stiftung <sdk@dfinity.org>"]
documentation = "https://github.com/miracl/core"
repository = "https://github.com/dfinity-publish/miracl_core_bls12381"
edition = "2018"
description = "Rust code of https://github.com/miracl/core (miracl_core) for curve BLS 12-381"
license-file = "LICENSE.txt"
readme = "README.adoc"
include = ["src", "Cargo.toml", "LICENSE", "README.adoc", "NOTICE.txt"]

[dependencies]

