[package]
name = "miracl_core_bls12381"
version = "4.1.2"
authors = ["DFINITY Stiftung <sdk@dfinity.org>"]
documentation = "https://github.com/miracl/core"
repository = "https://github.com/dfinity/miracl_core_bls12381"
edition = "2018"
description = "Rust code of https://github.com/miracl/core (miracl_core) for curve BLS 12-381"
license = "Apache-2.0"
readme = "README.md"
include = ["src", "Cargo.toml", "LICENSE", "README.md", "NOTICE.txt"]

[dependencies]

[features]
default = ['std']
std = []