[package]
name = "miracl_core_bls12381"
version = "4.2.2"
authors = ["DFINITY Stiftung <sdk@dfinity.org>"]
documentation = "https://github.com/miracl/core"
repository = "https://github.com/dfinity/miracl_core_bls12381"
edition = "2018"
description = "Rust code of https://github.com/miracl/core (miracl_core) for curve BLS 12-381"
license = "Apache-2.0"
readme = "README.md"
include = ["src", "Cargo.toml", "LICENSE", "README.md", "NOTICE.txt"]
keywords = ["deprecated", "abandoned"]

[dependencies]
wasm-bindgen = { version = "0.2.67", optional = true }

[dev-dependencies]
hex-literal = "0.3.4"

[features]
default = ['std', 'fallback_separator']
allow_alt_compress = []
fallback_separator = []
std = []

[lib]
crate-type = ["cdylib", "rlib"]

[package.metadata.wasm-pack.profile.release]
wasm-opt = ["-Oz", "--enable-mutable-globals"]

[profile.release]
lto = true
opt-level = 'z'
